nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/adminingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - admin.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: admin.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: cnp-portal-svc
          servicePort: 5002
