nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/buildis103ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildis103
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - is103.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: is103.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: buildis103
          servicePort: 80
