nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/gitingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: git
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - git.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: git.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: git
          servicePort: 80
