nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/grafanaingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - grafana.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: grafana.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
