nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/is105ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: is
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - is.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: is.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: is
          servicePort: 80
