nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/is107ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: is107
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - is107.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: is107.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: buildis107
          servicePort: 80
