nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/jenkinsingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - ci.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: ci.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
