nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/keycloak.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - auth.711.n3xgen.io
      secretName: tls-secret
  rules:
  - host: auth.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: kc
          servicePort: 80
