nexgenplatform/scriptsfornexgen/Data/Data/BreakFiles/umtest.yaml
apiVersion: v1
kind: Service
metadata:
  name: wm-um
  labels:
    app: wm-um
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: nhp
  selector:
    app: wm-um
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-um
  labels:
    app: wm-um
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wm-um
  template:
    metadata:
      labels:
        app: wm-um
    spec:
      containers:
        - name: um
          image: cgacr711.azurecr.io/711/webmethods/universalmessaging-server:10.7.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: nhp    
      imagePullSecrets:
        - name: myregistrykey
      
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wm-um
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-502"
spec:
  tls:
    - hosts:
      - wm-um.711.n3xgen.io
      secretName: cnp-tls
  rules:
  - host: wm-um.711.n3xgen.io
    http:
      paths:
      - backend:
          serviceName: wm-um
          servicePort: 9000
